// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRepo deleteRecord Should delete a record and return deleted record 1`] = `
"
                FOR l IN @@value0
                    FILTER l._from == @value1 OR l._to == @value1
                    REMOVE {_key: l._key} IN @@value0
                    RETURN OLD
            "
`;

exports[`RecordRepo deleteRecord Should delete a record and return deleted record 2`] = `
Object {
  "@value0": "core_edge_values_links",
  "value1": "users/222435651",
}
`;

exports[`RecordRepo find Should find records 1`] = `
Object {
  "bindVars": Object {
    "@collection": "test_lib",
  },
  "query": "FOR r IN @@collection RETURN r",
}
`;

exports[`RecordRepo find with filters Should filter records - simple 1`] = `
Object {
  "bindVars": Object {
    "@collection": "test_lib",
    "filterField0": "test_attr",
    "filterField1": "test_attr2",
    "filterValue0": "test",
    "filterValue1": "test2",
  },
  "query": "FOR r IN @@collection FILTER r.@filterField0 == @filterValue0 FILTER r.@filterField1 == @filterValue1 RETURN r",
}
`;
